[Fix]管理者ログインの不具合を修正

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,6 +2,10 @@
   <li>
     <%= link_to "ログアウト", destroy_end_user_session_path, method: :delete %>
   </li>
+<% elsif admin_signed_in? %>
+  <li>
+    <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
+  </li>
 <% else %>
   <li>
     <%= link_to "新規登録", new_end_user_registration_path %>
