[Update]ヘッダーのレイアウトを整理

--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Sign up</h2>
+<h2>新規登録</h2>
 
 <%= form_with model: @end_user, url: end_user_registration_path do |f| %>
   <%= render "public/shared/error_messages", resource: resource %>
