--- a/app/views/public/documents/index.html.erb
+++ b/app/views/public/documents/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Public::Documents#index</h1>
-<p>Find me in app/views/public/documents/index.html.erb</p>
+<h1>記録一覧</h1>
+<% @documents.each do |document| %>
+  <%= document.feeling %>
+  <%= document.content %>
+<% end %>
