--- a/app/views/public/documents/new.html.erb
+++ b/app/views/public/documents/new.html.erb
@@ -2,14 +2,16 @@
 <p>今の気持ちと言葉を記録しましょう。</p>
 
 <%= form_with model: @document do |f| %>
-  <h4>タグをつける</h4>
-  <p>※複数のタグをつける場合は「,」をつけてください。</p>
-  <p>例) 健康,感動,趣味</p>
-  <!--ここにタグ機能を実装する-->
+  <!--タグ機能-->
   
+  <!--感情ステータスを選択-->
+  <h4>今の気持ち</h4>
+  <%= f.select :feeling, Document.feelings.keys, {include_blank: "選択してください"} %>
+  
+  <!--記録フォーム-->
   <h4>記録内容</h4>
-  <%= f.text_area :content %>
+  <%= f.text_area :content %><br>
   
-  <%= f.submit '記録をつける' %>
+  <%= f.submit "記録をつける", class: 'btn btn-primary' %>
   
 <% end %>
