[Fix]enum日本語化の不具合を解消

--- a/app/views/public/documents/index.html.erb
+++ b/app/views/public/documents/index.html.erb
@@ -1,5 +1,5 @@
 <h1>記録一覧</h1>
 <% @documents.each do |document| %>
-  <%= document.feeling %>
-  <%= document.content %>
+  <p>気持ち：<%= document.feeling %></p>
+  <p>記録内容：<%= document.content %></p>
 <% end %>
