[Add]詳細画面を追加

--- a/app/views/public/documents/index.html.erb
+++ b/app/views/public/documents/index.html.erb
@@ -1,7 +1,9 @@
 <h1>記録一覧</h1>
 <% @documents.each do |document| %>
-  <p>
-    <%= document.created_at.strftime('%Y/%m/%d %H:%M') %><br>
-    <%= document.content %>
-  </p>
+  <%= link_to document_path(document) do %>
+    <div class="linkbox">
+      <%= document.created_at.strftime('%Y/%m/%d %H:%M') %><br>
+      <%= document.content %>
+    </div>
+  <% end %>
 <% end %>
