--- a/app/views/public/documents/new.html.erb
+++ b/app/views/public/documents/new.html.erb
@@ -1,7 +1,7 @@
 <h1>記録する</h1>
 <p>今の気持ちと言葉を記録しましょう。</p>
 
-<%= form_with model: @document do |f| %>
+<%= form_with model: @document_new do |f| %>
   <!--タグ機能-->
   
   <!--感情ステータスを選択-->
