--- a/app/views/public/documents/show.html.erb
+++ b/app/views/public/documents/show.html.erb
@@ -1,5 +1,5 @@
-<h1><%= @document.created_at.strftime('%Y/%m/%d %H:%M') %>の記録</h1>
-<div class="linkbox">
-  <%= @document.feeling_i18n %><br>
-  <%= @document.content %>
-</div>
+<h1><%= @document.created_at %>の記録</h1>
+<%= @document.feeling_i18n %><br>
+<%= @document.content %><br>
+
+<%= link_to '編集', edit_document_path(@document), class: "btn btn-success" %>
