--- a/app/views/public/documents/edit.html.erb
+++ b/app/views/public/documents/edit.html.erb
@@ -1,10 +1,18 @@
 <h1><%= l @document.created_at, format: :long %>の記録を編集</h1>
-<%= form_with model: @document, local: true do |f| %>
-  <h4>あの時の感情</h4>
+<%= form_with model: @document do |f| %>
+  <!--タグ投稿フォーム-->
+  <h4>タグをつける</h4>
+  <%= f.text_field :tag_name %>
+  
+  <!--感情ステータスを選択-->
+  <h4>あの時の気持ち</h4>
   <%= f.select :feeling, Document.feelings.keys.map { |k| [I18n.t("enums.document.feeling.#{k}"), k]} %><br>
+  
+  <!--記録投稿フォーム-->
   <h4>記録の内容</h4>
   <%= f.text_area :content %><br>
-  <%= f.submit '編集内容を保存', class: 'btn btn-success' %>
+  
+  <%= f.submit "編集内容を保存", class: 'btn btn-successy' %>
 <% end %>
 
 <%= link_to '詳細へ戻る', @document, class: "document_#{@document.id}" %> |
