--- a/app/views/public/documents/edit.html.erb
+++ b/app/views/public/documents/edit.html.erb
@@ -2,7 +2,7 @@
 <%= form_with model: @document do |f| %>
   <!--タグ投稿フォーム-->
   <h4>タグをつける</h4>
-  <%= f.text_field :tag_name %>
+  <%= f.text_field :tag_name, value: @tag_list %>
   
   <!--感情ステータスを選択-->
   <h4>あの時の気持ち</h4>
@@ -12,7 +12,7 @@
   <h4>記録の内容</h4>
   <%= f.text_area :content %><br>
   
-  <%= f.submit "編集内容を保存", class: 'btn btn-successy' %>
+  <%= f.submit "編集内容を保存", class: 'btn btn-success' %>
 <% end %>
 
 <%= link_to '詳細へ戻る', @document, class: "document_#{@document.id}" %> |
