--- a/app/views/public/documents/new.html.erb
+++ b/app/views/public/documents/new.html.erb
@@ -4,7 +4,7 @@
 <%= form_with model: @document_new do |f| %>
   <!--タグ投稿フォーム-->
   <h4>タグをつける</h4>
-  　<%= f.text_field :tag_name %>
+  <%= f.text_field :tag_name, placeholder:"複数つける場合は,で区切ってください" %>
   
   <!--感情ステータスを選択-->
   <h4>今の気持ち</h4>
