--- a/app/views/public/documents/index.html.erb
+++ b/app/views/public/documents/index.html.erb
@@ -10,6 +10,10 @@
       <% document.tags.each do |tag| %>
         <%= tag.name %><br>
       <% end %>
+      <!--お気に入り-->
+      <div class=<%= "favorite-" + document.id.to_s %> >
+        <%= render 'public/favorites/btn', document: document %>
+      </div>
       <!--記録内容-->
       <%= document.content %>
     </div>
