--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,6 +9,9 @@
           <%= link_to "記録を見る", documents_path, class: 'btn btn-primary' %>
         </li>
         <li class="nav-item">
+          <%= link_to "ユーザー情報", end_user_path(current_end_user), class: 'btn btn-primary' %>
+        </li>
+        <li class="nav-item">
           <%= link_to "ログアウト", destroy_end_user_session_path, method: :delete, class: 'btn btn-primary' %>
         </li>
       <% elsif admin_signed_in? %>
