--- a/app/views/public/end_users/edit.html.erb
+++ b/app/views/public/end_users/edit.html.erb
@@ -1,1 +1,13 @@
-<h1>Public::EndUsers#edit</h1>
+<h1>ユーザー情報を編集する</h1>
+<%= form_with model: @end_user do |f| %>
+
+  <h4>プロフィール画像</h4>
+  <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>  
+  
+  <h4>ユーザー名</h4>
+  <%= f.text_field :name, autofocus: true, id:"inputName" %>
+  
+  <%= f.submit "編集内容を保存", class: 'btn btn-success' %>
+<% end %>
+
+<%= link_to 'マイページへ戻る', @end_user, class: "end_user_#{@end_user.id}" %> |
