--- a/app/views/public/end_users/show.html.erb
+++ b/app/views/public/end_users/show.html.erb
@@ -1,10 +1,10 @@
-<h1>ユーザーのマイページ</h1>
+<h1>ユーザー情報</h1>
 <p>画像</p>
 <%= image_tag @end_user.get_profile_image(100,100) %>
 <p>ユーザー名</p>
 <%= @end_user.name %>
 
-<p>お気に入り一覧</p>
+<p>お気に入り</p>
 件数：<%= @favorites.count %><br>
 <% if @favorite_list.present? %>
   <% @favorite_list.each do |document| %>
@@ -33,3 +33,51 @@
   <%= link_to "編集", edit_end_user_path(@end_user), class: "btn btn-primary edit_user_#{@end_user.id}" %>
   <%= link_to "退会", end_user_confirm_path(@end_user), class: "btn btn-danger edit_user_#{@end_user.id}" %>
 <% end %>
+
+<h1>今までの投稿を分析</h1>
+
+<canvas id="myLineChart"></canvas>
+  <script>
+    $(document).on('turbolinks:load', function() {
+      var ctx = document.getElementById("myLineChart");
+      var myLineChart = new Chart(ctx, {
+        type: 'line',
+        data: {
+          labels: ['6日前', '5日前', '4日前', '3日前', '2日前', '1日前', '今日'],
+          datasets: [
+            {
+              label: '投稿した記録数',
+              data: [
+                <%= @documents.created_6day_ago.count %>,
+                <%= @documents.created_5day_ago.count %>, 
+                <%= @documents.created_4day_ago.count %>, 
+                <%= @documents.created_3day_ago.count %>, 
+                <%= @documents.created_2day_ago.count %>, 
+                <%= @documents.created_yesterday.count %>, 
+                <%= @documents.created_today.count %>
+              ],
+              borderColor: "rgba(0,0,255,1)",
+              backgroundColor: "rgba(0,0,0,0)",
+              tension: 0.4
+            }
+          ],
+        },
+        options: {
+          title: {
+            display: true,
+            text: '7日間の投稿数の比較'
+          },
+          responsive: true,
+          scales: {
+            y:{
+              suggestedMin: 0,
+              suggestedMax: 10
+            },
+            x:{
+              stacked: true
+            },
+          },
+        }
+      });
+    });
+  </script>
