--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,2 +1,16 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
+
+// header, footer
+header{
+  height: 100px;
+  background-color: #ece6d6;
+}
+
+footer {
+  background-color:#ece6d6;
+}
+
+.footer-text {
+  color: #727068;
+}
