--- a/app/views/public/documents/new.html.erb
+++ b/app/views/public/documents/new.html.erb
@@ -1,18 +1,31 @@
-<h1>記録する</h1>
-<p>今の気持ちと言葉を記録しましょう。</p>
+<div class="container mt-4">
+  <div class="row">
+    <div class="col-6 offset-3 text-center">
+      <h2 class="font-weight-bold">記録を書く</h2>
 
-<%= form_with model: @document_new do |f| %>
-  <!--タグ投稿フォーム-->
-  <h4>タグをつける</h4>
-  <%= f.text_field :tag_name, placeholder:"複数つける場合は,で区切ってください" %>
-  
-  <!--感情ステータスを選択-->
-  <h4>今の気持ち</h4>
-  <%= f.select :feeling, Document.feelings.keys.map { |k| [I18n.t("enums.document.feeling.#{k}"), k]} %>
-  
-  <!--記録投稿フォーム-->
-  <h4>記録内容</h4>
-  <%= f.text_area :content %><br>
-  
-  <%= f.submit "記録をつける", class: 'btn btn-primary' %>
-<% end %>
+      <%= form_with model: @document_new do |f| %>
+        <!--タグ投稿フォーム-->
+        <div class="form-group text-left mt-3 col-8 offset-2">
+          <%= f.label :tag_name, "タグをつけてください" %><br>
+          <%= f.text_field :tag_name, placeholder: "複数つける場合は,で区切ってください", class: "form-control form-control-sm" %>
+        </div>
+        <!--感情ステータスを選択-->
+        <div class="form-group text-left mt-3 col-8 offset-2">
+          <%= f.label :feeling, "今の気持ちを選んでください" %></br>
+          <%= f.select :feeling, Document.feelings.keys.map { |k| [I18n.t("enums.document.feeling.#{k}"), k]},
+              { prompt: false }, class: "form-control form-control-sm" %>
+        </div>
+        <!--記録投稿フォーム-->
+        <div class="form-group text-left mt-3 col-8 offset-2">
+          <%= f.label :content, "内容を書いてください" %><br>
+          <%= f.text_area :content, class: "form-control form-control-sm" %>
+        </div>
+        <!--ボタン-->
+        <div class="form-group mb-5">
+          <%= f.submit "記録する", class: "btn btn-outline-info rounded-pill w-50 mt-1" %>
+        </div>
+      <% end %>
+
+    </div>
+  </div>
+</div>
