--- a/app/views/public/documents/index.html.erb
+++ b/app/views/public/documents/index.html.erb
@@ -1,32 +1,17 @@
-<h1>記録一覧</h1>
-<p>
-  タグリスト
-  <% @tags.each do |list| %>
-      <%=link_to list.name, tag_search_documents_path(tag_id: list.id) %>
-  <% end %>
-</p>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-6 offset-3 text-center">
+      <h2 class="font-weight-bold">記録の一覧</h2>
+     </div>
 
-<% @documents.each do |document| %>
-  <%= link_to document_path(document) do %>
-   <%= image_tag document.end_user.get_profile_image(100,100) %>
-    <div class="box">
-      <%= l document.created_at, format: :mon %>
-      <%= l document.created_at, format: :daily %>
-      <%= l document.created_at, format: :times %><br>
-
-      <!--タグ-->
-      <p>
-        タグ：
-        <% document.tags.each do |tag| %>
-          ,<%= tag.name %>
-        <% end %>
-      </p>
-      <!--お気に入り-->
-      <div class=<%= "favorite-" + document.id.to_s %> >
-        <%= render 'public/favorites/btn', document: document %>
-      </div>
-      <!--記録内容-->
-      <p>内容：<%= document.content %></p>
+    <div class="col-10 offset-1 text-center">
+      タグリスト
+      <% @tags.each do |list| %>
+        <%=link_to list.name, tag_search_documents_path(tag_id: list.id) %>
+      <% end %>
     </div>
-  <% end %>
-<% end %>
+<div class="col-10 offset-1 text-left">
+    <%= render "public/documents/document_card", documents: @documents %>
+    </div>
+  </div>
+</div>
