--- a/app/views/public/documents/_document_card.html.erb
+++ b/app/views/public/documents/_document_card.html.erb
@@ -1,6 +1,6 @@
 <% documents.each do |document| %>
   <%= link_to document_path(document) do %>
-    <div class="card  mt-3">
+    <div class="card  mb-3">
       <!--card header-->
       <div class="card-header", style="color:#727068; background-color:#f2f0ec">
         <div class="d-flex bd-highlight">
@@ -22,7 +22,8 @@
         <p class="card-text"><%= document.content.truncate(57) %></p>
         <!--タグ-->
         <% document.tags.each do |tag| %>
-          <a class="btn btn-outline-secondary btn-sm", disabled="disabled">
+          <a class="btn btn-outline-dark btn-sm rounded-pill disabled" 
+              tabindex="-1" role="button" aria-disabled="true">
             <i class="fas fa-tag"></i> <%= tag.name %>
           </a>
         <% end %>
@@ -30,3 +31,4 @@
     </div>
   <% end %>
 <% end %>
+<%= paginate documents %>
