--- a/app/views/public/documents/word_search.html.erb
+++ b/app/views/public/documents/word_search.html.erb
@@ -1,24 +1,47 @@
-<h1>キーワード検索結果</h1>
-<p>検索結果は<%= @words_search.count %>件です</p>
-
-<% @words_search.each do |document| %>
-  <%= image_tag document.end_user.get_profile_image(100,100) %>
-  <%= link_to document_path(document) do %>
-    <div class="linkbox">
-      <%= l document.created_at, format: :mon %><br>
-      <%= l document.created_at, format: :daily %><br>
-      <%= l document.created_at, format: :times %><br>
-
-      <!--タグ-->
-      <% document.tags.each do |tag| %>
-        <%= tag.name %><br>
-      <% end %>
-      <!--お気に入り-->
-      <div class=<%= "favorite-" + document.id.to_s %> >
-        <%= render 'public/favorites/btn', document: document %>
-      </div>
-      <!--記録内容-->
-      <%= document.content %>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-6 offset-3 text-center">
+      <h2 class="font-weight-bold">記録の一覧</h2>
     </div>
-  <% end %>
-<% end %>
+    <div class="col-10 offset-1 text-center mt-3 mb-5">
+      <h4>検索結果は<%= @words_search.count %>件です</h4>
+    </div>
+    
+    <div class="col-10 offset-1 text-left">
+      <% @words_search.each do |document| %>
+        <%= link_to document_path(document) do %>
+          <div class="card  mb-3">
+            <!--card header-->
+            <div class="card-header", style="color:#727068; background-color:#f2f0ec">
+              <div class="d-flex bd-highlight">
+                <!--登録日-->
+                <div class="p-2 w-100 bd-highlight">
+                  <%= l document.created_at, format: :long %>
+                </div>
+                <!--お気に入り-->
+                <div class="ml-auto p-2 bd-highlight">
+                  <div class=<%= "favorite-" + document.id.to_s %>>
+                    <%= render 'public/favorites/btn', document: document %>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!--card body-->
+            <div class="card-body", style="color:#4b4841; background-color:#ffffff">
+              <!--記録内容-->
+              <p class="card-text"><%= document.content.truncate(57) %></p>
+              <!--タグ-->
+              <% document.tags.each do |tag| %>
+                <a class="btn btn-outline-dark btn-sm rounded-pill disabled" 
+                    tabindex="-1" role="button" aria-disabled="true">
+                  <i class="fas fa-tag"></i> <%= tag.name %>
+                </a>
+              <% end %>
+            </div>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
+    <%= paginate @words_search %>
+  </div>
+</div>
