--- a/app/views/public/documents/word_search.html.erb
+++ b/app/views/public/documents/word_search.html.erb
@@ -42,6 +42,10 @@
         <% end %>
       <% end %>
     </div>
-    <%= paginate @words_search %>
+    <!--ページネーション-->
+    <div class="col-6 offset-5 text-center">
+      <%= paginate @words_search %>
+    </div>
+    
   </div>
 </div>
