--- a/app/views/public/documents/tag_search.html.erb
+++ b/app/views/public/documents/tag_search.html.erb
@@ -39,7 +39,10 @@
           <% end %>
         <% end %> 
       </div>
-      <%= paginate @tags_search %>
+      <!--ページネーション-->
+      <div class="col-6 offset-5 text-center">
+        <%= paginate @tags_search %>
+      </div>
 
   </div>
 </div>
