[Update]ユーザーの詳細を変更

--- a/app/views/public/end_users/edit.html.erb
+++ b/app/views/public/end_users/edit.html.erb
@@ -1,13 +1,28 @@
-<h1>ユーザー情報を編集する</h1>
-<%= form_with model: @end_user do |f| %>
+<div class="container mt-4">
+  <div class="row">
+    <div class="col-6 offset-3 text-center">
+      <h2 class="font-weight-bold">ユーザー情報の編集</h2>
 
-  <h4>プロフィール画像</h4>
-  <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>  
-  
-  <h4>ユーザー名</h4>
-  <%= f.text_field :name, autofocus: true, id:"inputName" %>
-  
-  <%= f.submit "編集内容を保存", class: 'btn btn-success' %>
-<% end %>
-
-<%= link_to 'マイページへ戻る', @end_user, class: "end_user_#{@end_user.id}" %> |
+      <%= form_with model: @end_user do |f| %>
+        <!--画像-->
+        <div class="form-group text-left mt-3 col-8 offset-2">
+          <%= f.label :profile_image %></br>
+          <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
+        </div>
+        <!--名前-->
+        <div class="form-group text-left mt-3 col-8 offset-2">
+          <%= f.label :name %></br>
+          <%= f.text_field :name, autofocus: true, id:"inputName", class: "form-control form-control-sm" %>
+        </div>
+        <!--ボタン-->
+        <div class="form-group mb-5">
+          <%= f.submit "編集内容を保存", class: 'btn btn-outline-info rounded-pill w-50 mt-1' %>
+        </div>
+        
+        <div class="col-6 offset-3 text-center mb-3">
+          <%= link_to 'マイページへ戻る', @end_user, class: "end_user_#{@end_user.id}" %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
