--- a/app/views/public/end_users/_line_chart.html.erb
+++ b/app/views/public/end_users/_line_chart.html.erb
@@ -18,9 +18,10 @@
                 <%= documents.created_yesterday.count %>, 
                 <%= documents.created_today.count %>
               ],
-              borderColor: "rgba(0,0,255,1)",
-              backgroundColor: "rgba(0,0,0,0)",
-              tension: 0.4
+              borderColor: "rgba(255,154,60,0.5)",
+              backgroundColor: "rgba(255,154,60,0.4)",
+              tension: 0.5,
+              fill: true
             }
           ],
         },
