--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -25,3 +25,21 @@ footer {
 .card:hover {
   background-color: #b6b1a5;
 }
+
+// chart
+.chart_price {
+  position: relative;
+}
+
+.chart_title {
+   position: absolute;
+   top: 0;
+   left: 0;
+   margin: auto;
+   right: 0;
+   margin: auto;
+   text-align: center;
+   top: 50%;
+   -webkit-transform: translateY(-50%);
+   transform: translateY(-50%); 
+}
