--- a/app/views/public/end_users/confirm.html.erb
+++ b/app/views/public/end_users/confirm.html.erb
@@ -1,10 +1,20 @@
-<h1>退会確認画面</h1>
-<p>
-  退会手続きをされますと、これまでの記録履歴がなど一部のサービスが利用できなくなります。<br>
-  再度ご利用をいただく場合には、新規登録のお手続きが必要になります。<br>
-  本当に退会してよろしいですか？
-</p>
-
-<%= link_to "退会する", end_user_withdrawal_path, method: :patch, 
-    data: { confilm: "本当に退会しますか？" }, class: 'btn btn-danger' %>
-<%= link_to "退会しない", end_user_path(current_end_user), class: 'btn btn-primary' %>
+<div class="container mt-4">
+  <div class="row">
+    <div class="offset-3 text-center">
+      <h2 class="font-weight-bold">退会確認</h2>
+      <!--説明文-->
+      <p class="mt-3">
+        退会手続きをされますと、記録履歴など一部のサービスが利用できなくなります。<br>
+        再度ご利用をいただく場合には、新規登録のお手続きが必要になります。<br>
+        本当に退会してよろしいですか？
+      </p>
+      <!--ボタン-->
+      <div class="mb-4">
+        <%= link_to "退会しない", end_user_path(current_end_user),
+            class: 'btn btn-outline-info rounded-pill w-50 mt-1' %>
+        <%= link_to "退会する", end_user_withdrawal_path, method: :patch, 
+            data: { confilm: "本当に退会しますか？" }, class: 'btn btn-outline-danger rounded-pill w-50 mt-3' %>
+      </div>
+    </div>
+  </div>
+</div>
