--- a/app/views/public/documents/tag_search.html.erb
+++ b/app/views/public/documents/tag_search.html.erb
@@ -1,6 +1,6 @@
 <div class="container mt-5">
   <div class="row">
-    <div class="col-6 offset-3 text-center">
+    <div class="col-6 offset-3 text-center mt-3 mb-5">
       <h2 class="font-weight-bold">タグ検索結果</h2>
     </div>
 
