--- a/app/views/public/end_users/show.html.erb
+++ b/app/views/public/end_users/show.html.erb
@@ -13,8 +13,10 @@
       <% end %>
       <!--ボタン-->
       <% if @end_user.name != "guestuser" %>
-        <%= link_to "編集", edit_end_user_path(@end_user), class: "btn btn-outline-success btn-sm rounded-pill mt-1 edit_user_#{@end_user.id}" %>
-        <%= link_to "退会", end_user_confirm_path(@end_user), class: "btn btn-outline-danger btn-sm rounded-pill mt-1 edit_user_#{@end_user.id}" %>
+        <%= link_to "編集", edit_end_user_path(@end_user),
+            class: "btn btn-outline-success btn-sm rounded-pill mt-1 edit_user_#{@end_user.id}" %>
+        <%= link_to "退会", end_user_confirm_path(@end_user),
+            class: "btn btn-outline-danger btn-sm rounded-pill mt-1 edit_user_#{@end_user.id}" %>
       <% end %>
     </div>
     <!--right side-->
