--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -8,9 +8,9 @@
         <% @end_users.each do |end_user| %>
         <div class="mt-3 mb-3 ml-2">
           <%= link_to admin_end_user_path(end_user) do %>
-            <div class="card" style="width: 15rem; color:#4b4841; background-color:#ffffff;">
+            <div class="card" style="width: 15rem; color:#727068; background-color:#ffffff;">
               <!--プロフィール画像-->
-              <%= image_tag end_user.get_profile_image(100,180), class: "card-img-top", alt: "Card image cap",
+              <%= image_tag end_user.get_profile_image(200,200), class: "card-img-top", alt: "Card image cap",
                   style: "height: 150px; width: auto; object-fit: cover" %>
               <div class="card-body">
                 <!--ユーザー名-->
